env/code_53c04072c9f34/stderr.txt
main.java:10: error: illegal start of expression
	}
	^
main.java:11: error: reached end of file while parsing
}
 ^
2 errors
